--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "symfony/framework-bundle": "5.4.*",
         "symfony/google-mailer": "5.4.*",
         "symfony/mailer": "5.4.*",
+        "symfony/mime": "5.4.*",
         "symfony/property-access": "5.4.*",
         "symfony/property-info": "5.4.*",
         "symfony/runtime": "5.4.*",
