--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,10 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
+app_img:
+  path: /img/{filename}
+  controller: App\Controller\BackController::serveImage
+
+app_img2:
+  path: /front/{filename}
+  controller: App\Controller\FrontController::serveImage
