--- a/.env
+++ b/.env
@@ -15,9 +15,9 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-# APP_ENV=dev
-# APP_SECRET=1ac9277bd7040e5c00de5b2db1097ce1
-APP_ENV=prod
+APP_ENV=dev
+APP_SECRET=1ac9277bd7040e5c00de5b2db1097ce1
+# APP_ENV=prod
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
